Quick overflow fix

--- a/resources/assets/sass/_nav.sass
+++ b/resources/assets/sass/_nav.sass
@@ -123,6 +123,7 @@ nav.navigation
                         display: block
                         background: transparent
                         border: none
+                        right: 0
 
                     &.is-showing
                         display: block
